syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/gentcod/DummyBank/pb";

message Account {
   string username = 1;
   string balance = 2;
   string currency = 3;
   google.protobuf.Timestamp created_at = 4;
   google.protobuf.Timestamp updated_at = 5;
}