syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/gentcod/DummyBank/pb";

message CreateUserRequest {
   string username = 1;
   string full_name = 2;
   string email = 3;
   string password = 4;
}

message CreateUserResponse {
   User user = 1;
}

message UpdateUserRequest {
   string id = 1;
   optional string full_name = 2;
   optional string email = 3;
   optional string password = 4;
}

message UpdateUserResponse {
   User user = 1;
}

message LoginUserRequest {
   string username = 1;
   string password = 2;
}

message LoginUserResponse {
   User user = 1;
   string session_id = 2;
   string access_token = 3;
   string refresh_token = 4;
   google.protobuf.Timestamp access_token_expired_at = 5;
   google.protobuf.Timestamp refresh_token_expired_at = 6;
}

message VerifyEmailRequest {
   string id = 1;
   string token = 2;
}

message VerifyEmailResponse {
   bool is_verified = 1;
}