syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_user.proto";
import "rpc_account.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/gentcod/DummyBank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
   info: {
      title: "Dummy Bank";
      version: "1.1";
      contact: {
      name: "Oyefule Oluwatayo";
      url: "https://github.com/gentcod/dummyBank";
      email: "oyefuleoluwatayo@gmail.com";
      };
      // license: {
      // name: "BSD 3-Clause License";
      // url: "https://github.com/grpc-ecosystem/grpc-gateway/blob/main/LICENSE";
      // };
      // extensions: {
      // key: "x-something-something";
      // value {string_value: "yadda"}
      // }
   };
};

service DummyBank {
   rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
      option (google.api.http) = {
         post: "/api/v1/user/signup"
         body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
         description: "Use this endpoint to create a user account"
         summary: "Create new User"
      };
   }
   rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
      option (google.api.http) = {
         patch: "/api/v1/user/update"
         body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
         description: "Use this endpoint to update a user account"
         summary: "Update existing User"
      };
   }
   rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
      option (google.api.http) = {
         post: "/api/v1/user/login"
         body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
         description: "Use this endpoint to authenticate a user"
         summary: "Login User"
      };
   }

   rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
      option (google.api.http) = {
         post: "/api/v1/account/create"
         body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
         description: "Use this endpoint to create an account based on specified currency"
         summary: "Create Account"
      };
   }
   rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountResponse) {
      option (google.api.http) = {
         post: "/api/v1/account/update"
         body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
         description: "Use this endpoint to update an account balance based on specified currency"
         summary: "Update Account"
      };
   }
}